# debt_book

./: .gitignore  TODO.txt  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
api/: .gitignore  Cargo.toml  server.ts
api/src/: config.rs  main.rs
api/src/endpoints/: delete.rs  get.rs  mod.rs  patch.rs  post.rs  scopes.rs
api/src/structs/: delete.rs  get.rs  patch.rs  post.rs
api/src/tests/: data.rs  test.rs
backend/: package-lock.json  package.json  server.ts
backend/api/: .gitignore  Cargo.toml
frontend/: TODO.txt  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/src/: App.tsx  DebtRouting.tsx  index.css  index.tsx
frontend/src/Constants/: Constants.ts
frontend/src/bag/: bag.ts  mapping.ts  store.tsx
frontend/src/components/: SideBar.tsx
frontend/src/components/Constants/: Constants.ts  Get.ts  Patch.ts  Posts.ts
frontend/src/hooks/: useAllSeriesNames.ts  useDebtPricingColumns.ts  useDebtPricingLoader.ts  useDebtPricingUpload.ts  useDebtSeriesLoader.ts  useDebtServiceColumns.ts  useDebtServiceLoader.ts  useDebtServiceUpload.ts  useSeriesNames.ts
frontend/src/pages/: DebtSeriesForm.tsx
frontend/src/utils/: api.ts  diffSubmit.ts  diffing.ts  func.ts  normalizeCostInput.ts  parseDebtSeries.ts  submitWithDiff.ts  validate.ts
public/assets/: index.html
src/: App.tsx  index.css
src/components/: SideBar.tsx  ThemedMenuItem.tsx
src/components/Debt/: DebtService.tsx  Issuance.tsx  Issuer.tsx  Maturity.tsx  Series.tsx
src/components/Form/: ThemedInput.tsx
src/public/: index.html
(+35 files in other folders)
