[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
anyhow = "1.0"
serde_json = "1.0"
odbc-api = "19"
env_logger = "0.11.8"
log = "0.4"
actix-cors = "0.7.1"
rustls-pemfile = "2.2.0"
rcgen = "0.14.5"
