[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
anyhow = "1.0"
serde_json = "1.0"
odbc-api = "19"         # ODBC crate for Rust (wraps the system's ODBC driver manager)
env_logger = "0.10"
log = "0.4"
